--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -226,15 +226,15 @@
                                         <!-- back content -->
                                         <div class="card">
                                             <div class="card-block pt-3">
-                                                <h4 class="card-title">Kimono Play</h4>
-                                                <h6 class="card-subtitle text-muted mb-2">Mobile Capable Web App</h6>
+                                                <h4 class="card-title">DesktopDungeonBot</h4>
+                                                <h6 class="card-subtitle text-muted mb-2">Desktop Bot</h6>
                                                 <div class="card-block pl-3 pr-3 text-left">
                                                     <p>For one of my favourite casual games, I made a bot that accumulates wealth by reading images to determine the most profitable path through a dungeon.</p>
                                                     <hr>
                                                     <h5>Stack</h5>
                                                     <p>Python</p>
                                                     <hr>
-                                                    <div id="card-links-kimono" class="text-left container">
+                                                    <div class="text-left container">
                                                         <span class="fa-stack fa-1x mb-2">
                                                             <a href="https://github.com/CZMoodyDev/DesktopDungeonBot" target="_blank">
                                                                 <i class="fab fa-github fa-stack-2x"></i>
