--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -118,7 +118,7 @@
             </section>
             <section id="portfolio">
                 <div class="container text-center pt-5">
-                    <h1 class="pb-2">Latest Projects</h1>
+                    <h1 class="pb-5">Latest Projects</h1>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card-flip">
@@ -265,9 +265,10 @@
                 </div>
             </section>
             <section id="services" >
-                <div class="container-fluid">
+                <div class="container pt-5">
+                    <h1 class="pb-5 text-center">Freelance Services</h1>
                     <div class="row">
-                        <div class="col-md-6 my-auto">
+                        <div class="col-md-6">
                             <h1 class="text-center">
                                 Custom Websites
                             </h1>
