--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -126,7 +126,7 @@
                                     <div class="front">
                                         <!-- front content -->
                                         <div class="card">
-                                            <img class="card-img-top uniform-img-top" src="./static/img/Kimono.png"  data-holder-rendered="true">
+                                            <img class="card-img-top uniform-img-top" src="./static/img/Kimono.PNG"  data-holder-rendered="true">
                                             <div class="card-block">
                                                 <h4 class="card-title pt-3">Kimono Play App</h4>
                                                 <p class="card-text">An educational web app to teach the different styles and rules of kimono culture</p>
@@ -270,9 +270,9 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h1 class="text-center">
-                                Custom Websites
+                                Custom Static Websites
                             </h1>
-                            <p class="text-center">I create custom websites for clients</p>
+                            <p class="text-center">I can work with you to build a custom static website. Perfect for portfolios, </p>
                         </div>
                         <div id="custom-websites" class="col-md-6" ></div>
                     </div>
