Done portfolio main page

--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -265,31 +265,66 @@
                 </div>
             </section>
             <section id="services" >
-                <div class="container pt-5">
+                <div class="container pt-5 pb-5">
                     <h1 class="pb-5 text-center">Freelance Services</h1>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <h3 class="text-center">
+                                Custom Static Websites
+                            </h3>
+                            <p class="text-center">I can work with you to build a custom static website. Perfect for portfolios, photography and art showcases, blogs, event and business advertisements, information websites, bulletins, etc. </p>
+                        </div>
+                        <div id="custom-websites" class="col-md-6 text-center my-auto">
+                            <a class="btn btn-outline-secondary">Learn More <i class="fa fa-arrow-right"></i></a>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-md-6">
-                            <h1 class="text-center">
-                                Custom Static Websites
-                            </h1>
-                            <p class="text-center">I can work with you to build a custom static website. Perfect for portfolios, </p>
+                            <h3 class="text-center">
+                                Custom Scripts and Productivity Tools
+                            </h3>
+                            <p class="text-center">Coming soon</p>
                         </div>
-                        <div id="custom-websites" class="col-md-6" ></div>
+                        <div id="custom-scripts" class="col-md-6 text-center my-auto">
+                            <a class="btn btn-outline-secondary coming-soon">Coming Soon</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h3 class="text-center">
+                                Custom Dynamic Websites
+                            </h3>
+                            <p class="text-center">Coming soon</p>
+                        </div>
+                        <div id="custom-dynamic" class="col-md-6 text-center my-auto">
+                            <a class="btn btn-outline-secondary coming-soon">Coming Soon</a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h3 class="text-center">
+                                Custom Android Mobile Apps
+                            </h3>
+                            <p class="text-center">Coming soon</p>
+                        </div>
+                        <div id="custom-android" class="col-md-6 text-center my-auto">
+                            <a class="btn btn-outline-secondary coming-soon">Coming Soon</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="contact" >
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-6 my-auto">
-                        <h1 class="text-center">
+        <section id="contact">
+            <div id="contact-info" class="container pb-5 pt-5">
+                <div class="row h-100">
+                    <div class="text-center col-md-12 my-auto">
+                        <h1>
                             Contact Me
                         </h1>
-                        <p class="text-center">Send me an email if you are interested in a product</p>
+                        <p>Want to purchase a product or work together on a project? Send me an email: <a class="hiddenMail font-weight-bold" data-email="czmoodydevATgmailDOTcom">Show Email</a></p>
                     </div>
-                    <div id="contact-me" class="col-md-6" ></div>
                 </div>
+
             </div>
         </div>
     </section>
