Fixed padding for nav

--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -118,7 +118,7 @@
             </section>
             <section id="portfolio">
                 <div class="container text-center pt-5">
-                    <h1 class="pb-5">Latest Projects</h1>
+                    <h1 class="pt-5 pb-5">Latest Projects</h1>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="card-flip">
@@ -266,7 +266,7 @@
             </section>
             <section id="services" >
                 <div class="container pt-5 pb-5">
-                    <h1 class="pb-5 text-center">Freelance Services</h1>
+                    <h1 class="pt-5 pb-5 text-center">Freelance Services</h1>
                     <div class="row mb-3">
                         <div class="col-md-6">
                             <h3 class="text-center">
