Fixed mobile height issue

--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -267,7 +267,7 @@
             <section id="services" >
                 <div class="container pt-5 pb-5">
                     <h1 class="pt-5 pb-5 text-center">Freelance Services</h1>
-                    <div class="row mb-3">
+                    <div class="row">
                         <div class="col-md-6">
                             <h3 class="text-center">
                                 Custom Static Websites
@@ -324,7 +324,6 @@
                         <p>Want to purchase a product or work together on a project? Send me an email: <a class="hiddenMail font-weight-bold" data-email="czmoodydevATgmailDOTcom">Show Email</a></p>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
