--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -267,7 +267,7 @@
             <section id="services" >
                 <div class="container pt-5 pb-5">
                     <h1 class="pt-5 pb-5 text-center">Freelance Services</h1>
-                    <div class="row">
+                    <div class="row mb-3">
                         <div class="col-md-6">
                             <h3 class="text-center">
                                 Custom Static Websites
@@ -278,7 +278,7 @@
                             <a class="btn btn-outline-secondary">Learn More <i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-3">
                         <div class="col-md-6">
                             <h3 class="text-center">
                                 Custom Scripts and Productivity Tools
@@ -289,7 +289,7 @@
                             <a class="btn btn-outline-secondary coming-soon">Coming Soon</a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-3">
                         <div class="col-md-6">
                             <h3 class="text-center">
                                 Custom Dynamic Websites
@@ -300,7 +300,7 @@
                             <a class="btn btn-outline-secondary coming-soon">Coming Soon</a>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-3">
                         <div class="col-md-6">
                             <h3 class="text-center">
                                 Custom Android Mobile Apps
