--- a/newnewportfolio/services/static-websites.html
+++ b/newnewportfolio/services/static-websites.html
@@ -34,7 +34,7 @@
                             Custom Static Websites
                         </h1>
                         <p>I can build you a custom static 
-                            <a href="#" title="Static Website" data-toggle="popover" data-content="Websites that only serve content one way. Users cannot send information back to the server.">
+                            <a href="#" title="Static Website" data-toggle="popover" data-trigger="hover" data-content="Websites that only serve content one way. Users cannot send information back to the server.">
                                 <i class="fas fa-info-circle"></i>
                             </a>
                             website to showcase your talent, spread the word, or be your living resume. I can host your website so it is accessible to all and maintain it so that it is always synced to your needs.
