Links for service pages

--- a/dmcoptometry/index.html
+++ b/dmcoptometry/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="row">
                         <div class="container text-center">
-                            <a class="btn bg-transparent">
+                            <a href="./our-practice/index.html" class="btn bg-transparent">
                                 View all Services <i class="fas fa-arrow-right ml-1"></i>
                             </a>
                         </div>
