--- a/dmcoptometry/our-practice/index.html
+++ b/dmcoptometry/our-practice/index.html
@@ -21,7 +21,7 @@
                         <li class="nav-item active"><a data-toggle="collapse" data-target=".navbar-collapse" class="nav-link" href="#">Home</a></li>
                         <li class="nav-item"><a data-toggle="collapse" data-target=".navbar-collapse" class="nav-link" href="#">About</a></li>
                         <li class="nav-item"><a data-toggle="collapse" data-target=".navbar-collapse" class="nav-link" href="#">Portfolio</a></li>
-                        <li class="nav-item"><a data-toggle="collapse" data-target=".navbar-collapse" class="nav-link" href="./services.html">Services</a></li>
+                        <li class="nav-item"><a data-toggle="collapse" data-target=".navbar-collapse" class="nav-link" href="#">Services</a></li>
                         <li class="nav-item"><a data-toggle="collapse" data-target=".navbar-collapse" class="nav-link" href="#">Contact</a></li>
                     </ul>
                 </div>
