Link in book now

--- a/dmcoptometry/our-practice/index.html
+++ b/dmcoptometry/our-practice/index.html
@@ -70,7 +70,7 @@
                             <p class="small">Using our external booking site with Optiks International</p>
                         </div>
                         <div class="col-md-4 my-auto text-center">
-                            <button class="btn">Book Now</button>
+                            <a target="_blank" href="http://factoryoptical.ca/homepage/book-an-eye-exam-2/" class="btn">Book Now</a>
                         </div>
                     </div>
                 </div>
