--- a/dmcoptometry/about/index.html
+++ b/dmcoptometry/about/index.html
@@ -18,8 +18,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../about/index.html">About</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="#">Services</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../about/index.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../our-practice/index.html">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="../contact/index.html">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" href="../index.html#info">Patient Information</a></li>
                         <li class="nav-item"><a class="nav-link" href="../careers/index.html">Careers</a></li>
@@ -28,26 +28,16 @@
             </nav>
             <div class="container p-5">
                 <div class="row">
-                    <div class="col-md-12 mb-5">
-                        <img class="img-fluid" src="../static/img/moremounins.jpg">
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-md-12">
-                        <h3>Comprehensive Eye Exams</h3>
-                        <p>More details than what was on the front page. Or exactly the same, its really up to you. Here you can talk about the service procedure or give a blurb about it</p>
+                        <h1 class="border-blue">Meet Our Optometrist</h1>
                     </div>
-                    <div class="col-md-12">
-                        <h3>Dry Eyes Evaluation</h3>
-                        <p>Not living in Vancouver sucks, it's true. But don't let your eyes, which are supposed to be wet, be dry. We'll fix you up so you can cry yourself to sleep at night.</p>
+                    <div class="col-md-4">
+                        <img src="../static/img/denmark.png" />
                     </div>
-                    <div class="col-md-12">
-                        <h3>Sclera Refactoring</h3>
-                        <p>We will take our stethopthomometer and prod your sclera near the iris. You get two for flinching.</p>
-                    </div>
-                    <div class="col-md-12">
-                        <h3>Free Eye Exams</h3>
-                        <p>In exchange for a lunch, you promised</p>
+                    <div class="col-md-8">
+                        <p>Dr. Dan Mark Cuevas graduated from Harry Ainlay Composite High School in Edmonton, AB in 2005. He began university in the fall of that same year at the University of Alberta. After 2 years at the U of A, Dr. Cuevas trasferred to  the University of Waterloo in Waterloo, Ontario where he graduated with a B.Sc in Honours Biomedical Sciences in 2010.</p>
+                        <p>Dr. Cuevas began his formal optometric education in August 2010 at the Arizona College of Optometry at Midwestern University in Glendale, Arizona and graduated May of 2014. While there he served as the class historian, and treasurer for the Lions Club at the University. He was also involved in academic research involving the measurement of dynamic visual acuity and has presented 2 academic posters at the American Academy of Optometry.</p>
+                        <p>During his free time he enjoys playing the piano and guitar, hiking, snowboarding, and taking photographs of the adventures in between.</p>
                     </div>
                 </div>
             </div>
